Styling fix for readability

--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,9 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
+
+.smallHeader {
+    display: inline;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
